Remove Check Vacancies Button

--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
             <h6 class="mb-4 text-white">
                 We have extensive experience working with a number of companies and being trusted partners.
             </h6>
-            <button type="button" class="btn btn-light fw-bold py-3 rounded-1 lh-1 mx-auto mx-lg-0"
-                    style="width: 187px">
-                Check Vacancies
-            </button>
+<!--            <button type="button" class="btn btn-light fw-bold py-3 rounded-1 lh-1 mx-auto mx-lg-0"-->
+<!--                    style="width: 187px">-->
+<!--                Check Vacancies-->
+<!--            </button>-->
         </div>
         <div class="col col-lg-6 green-line-image-wrapper position-relative">
             <img src='./Images/job_offers_bro.svg' alt="job offers" class="img">
