--- a/index.html
+++ b/index.html
@@ -341,31 +341,29 @@
     </div>
     <div id="contact"
          class="container-fluid contact-us_gradient bg-light py-6 py-sm-7 py-lg-9 px-2 px-sm-3 px-md-4 px-lg-6">
-        <div
-                class="form-wrapper d-flex align-items-center flex-column-reverse flex-lg-row p-3 p-lg-6 p-xl-8 mb-7 mx-auto bg-white rounded-3">
+         <div class="form-wrapper d-flex align-items-center flex-column-reverse flex-lg-row p-3 p-lg-6 p-xl-8 mb-7 mx-auto bg-white rounded-3">
             <div class="form-responsive-fonts col col-lg-6">
                 <h1 class="display-5 fw-bold mb-3">Reach out now</h1>
                 <h6 class="mb-4">
                     Schedule a free consultation with us to work out your project roadmap. We will find the best
                     solution for your needs.
                 </h6>
-
-                <form class="row row-cols-1">
+                <form action="https://formspree.io/f/myyreqgq" method="post">
                     <div class="col col-lg-6 mb-2 mb-lg-3 mb-xl-4">
                         <input class="form-control form-control-lg bg-light rounded-1 lh-1" type="text"
-                               placeholder="Name">
+                               name="name" placeholder="Name" required>
                     </div>
                     <div class="col col-lg-6 mb-2 mb-lg-3 mb-xl-4">
                         <input class="form-control form-control-lg bg-light rounded-1 lh-1" type="text"
-                               placeholder="Company">
+                               name="company" placeholder="Company">
                     </div>
                     <div class="col mb-2 mb-lg-3 mb-xl-4">
                         <input type="email" class="form-control form-control-lg bg-light rounded-1 lh-1"
-                               id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                               name="_replyto" aria-describedby="emailHelp" placeholder="Email" required>
                     </div>
                     <div class="col form-floating mb-2 mb-lg-3 mb-xl-4 border-0">
-                            <textarea class="form-textarea w-100 border bg-light rounded-1 px-2 px-lg-4 py-2 py-lg-3"
-                                      placeholder="Your message here" id="floatingTextarea2"></textarea>
+                        <textarea class="form-textarea w-100 border bg-light rounded-1 px-2 px-lg-4 py-2 py-lg-3"
+                                  name="message" placeholder="Your message here" required></textarea>
                     </div>
                     <div class="col-12">
                         <button type="submit" class="w-100 btn btn-success lh-1 py-3 text-white rounded-1">
@@ -375,6 +373,10 @@
                     </div>
                 </form>
             </div>
+            <div class="col col-lg-6">
+                <img src="./Images/emails-bro.svg" alt="contact" class="w-100 mt-lg-5 d-none d-lg-block"/>
+            </div>
+        </div>        
             <div class="col col-lg-6">
                 <img src="./Images/emails-bro.svg" alt="contact" class="w-100 mt-lg-5 d-none d-lg-block"/>
             </div>
