--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://db.onlinewebfonts.com/c/213e56f9ea368890b9d2da0577e49dab?family=Zona+Pro" rel="stylesheet"
           type="text/css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-
+</head>
 <body>
 <div class="container-xxl p-0">
     <div class="px-3 px-sm-4 px-md-5 px-lg-6 px-xl-7 px-xxl-8 pb-5 pb-sm-6 pb-md-7 pb-lg-9 pb-xl-12">
